manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
    - port: 80
